--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^6.0.0",
     "html-webpack-plugin": "^5.6.3",
+    "mini-css-extract-plugin": "^2.9.2",
     "style-loader": "^3.0.0",
     "webpack": "^5.0.0",
     "webpack-cli": "^4.0.0",
